@@ -1,3 +1,7 @@
+Wed May 16 12:50:55 GMT 2012  Olly Betts <olly@survex.com>
+
+	* letor_internal.cc: Prefer ++x to x++.
+
 Wed May 16 11:25:30 GMT 2012  Olly Betts <olly@survex.com>
 
 	* letor.cc: Change the methods which just forward to Letor::Internal
